<resources>
    <string name="app_name">Nashbud</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="pls_wait_txt">Please wait....</string>
    <string name="FirstPageText">Discover people from everywhere.Connect with people you wish to follow  to start a conversation or follow their activities.</string>
    <string name="SecondPageText">All your conversations \n are secured by encryption.No third party applications are allowed to get access to your conversation.</string>
    <string name="ThirdPageText">Share what is going on, your daily moments and your favourite memories with your Nashbud contacts.</string>
    <string name="FourthPageText">Search a add \n people from all over the world to connect and follow their real time moments.</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="empty_state_view_activity">Share what’s going on and follow posts \n of your nashbud contacts.</string>
    <string name="empty_state_view_activity_tap">Tap here to discover people</string>
    <string name="empty_state_view_diary">All your posts are secured in your \n diary.</string>
    <string name="no_contacts_requests_yet">No contact requests received yet.</string>
    <string name="you_have_no_nashbud_contacts_yet">You have no nashbud contacts yet.</string>
    <string name="new_group">New Group</string>
    <string name="profile">Edit Profile</string>
    <string name="send_feedback">Send feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="placeholder">Placeholder</string>
    <string name="empty_view_home">Oh oh! Looks like you\'re all alone</string>
    <string name="empty_view_thread">Send the first message!</string>
    <string name="hint_message">Type your message..</string>
    <string name="message_message_copied">Copied to clipboard</string>
    <string name="clipboard_title_copied_message">Copied message</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="error_loading_user">Couldn\'t load user</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"
    </string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="pref_header_general">Accounts</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data usage &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Photos</item>
        <item>Audio</item>
        <item>Videos</item>
        <item>Documents</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">My Notifications</string>
    <string name="pref_title_ringtone">Notification Tone</string>
    <string name="message_notifications">Message Notifications</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_private_account">Private Account</string>
    <string name="pref_blocked_contacts">Blocked Contacts</string>
    <string name="pref_hide_posts_from">Hide posts from</string>
    <string name="pref_who_can_comments_on_my_posts">Who can comment on my post?</string>
    <string name="pref_who_can_reposts_on_my_posts">Who can repost my post?</string>
    <string name="pref_my_contacts_and_followers">My contacts and followers</string>
    <string name="pref_send_feedback">Send Feedback</string>
    <string name="pref_terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="pref_change_number">Change Number</string>
    <string name="pref_delete_all_chats">Delete all Chats</string>
    <string name="pref_deactivate_account">Deactivate Account</string>
    <string name="pref_private_account_key">Private Account</string>
    <string name="pref_blocked_contacts_key">Blocked Contacts</string>
    <string name="pref_change_number_key">Change Number</string>
    <string name="pref_delete_all_chats_key">Delete all Chats</string>
    <string name="pref_deactivate_account_key">Deactivate Account</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="invite_your_friends">Invite your contacts to <font fgcolor="#303F9F" fgstyle="bold"><b>NASH</b></font><font fgcolor="#ff33b5e5">BUD</font> \n Let them know you are here....</string>
    <string name="invite_your_contacts">Invite Your Contacts</string>
    <string name="verify_msg">Please enter your phone number to recieve a verification code</string>
    <string name="upload_photo_text">Provide a profile photo and \n your full name, Let people know about you.</string>
    <string name="NoRecent">No recent</string>
    <string name="my_profile_text"> to add display photos and videos here. Your Profile visitors can see this.</string>
    <string name="change_number_text1">Changing your number will transfer your\naccount data and setting </string>
    <string name="change_number_text2">If you have a new phone and new\nnumber,first change your number in your old phone </string>
    <string name="please_number">Please enter your</string>
    <string name="please_number_text">old country code and phone number</string>
    <string name="please_number_text1">new country code and phone number</string>
    <string name="deactive_number_head">Deactivating your account will log\nyou out of nashbud.Your data\nwill be restored once you login</string>
    <string name="deactive_number_text">Confirm your number to deactivate your account</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Logged in !</string>
    <string name="signed_out">You are not logged in !</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Login</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
</resources>