<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_false"
        android:title="@string/pref_private_account"
        android:summary="Your Contacts can only follow your posts"
        />
    <Preference
        android:key="blocked_account"
        android:title="@string/pref_blocked_contacts"
        android:summary="0 people"/>

    <Preference
        android:key="change_number"
        android:title="@string/pref_change_number"
       />

    <Preference
        android:key="delete_all_chats"
        android:title="@string/pref_delete_all_chats"
        />
    <Preference
        android:key="deactivate_account"
        android:title="@string/pref_deactivate_account"
        />
</PreferenceScreen>